# bin2shellcode

./: CMakeLists.txt  LICENSE  README.md
cmake/: cmake_uninstall.cmake.in
include/converter/: converter.h
src/: main.cpp
src/converter/: converter.cpp
tests/: README.md  shellcode.b64  shellcode.c  shellcode.cs  shellcode.go  shellcode.hex  shellcode.ps1  shellcode.py  shellcode.raw  shellcode.rb  shellcode.rs  shellcode.uuid  test_converter.cpp
